--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
+include CONTRIBUTING.rst
 include LICENSE
+include README.rst
 recursive-include newsfeed *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
