--- a/.coveragerc
+++ b/.coveragerc
@@ -6,6 +6,9 @@ omit =
     *site-packages*
     *tests*
     *.tox*
+    *migrations*
+    wsgi.py
+    asgi.py
 show_missing = True
 exclude_lines =
     raise NotImplementedError
