--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{36,37}-django22, py{36,37}-django30, py{36,37}-django31, lint
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/newsfeed
-commands = coverage run --source newsfeed runtests.py
+commands = coverage run --source newsfeed runtests.py {posargs}
 deps =
     django220: Django>=2.2,<3
     django300: Django>=3,<3.1
