--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,19 @@
 [tox]
-envlist = py{36,37}-django22, py{36,37}-django30, py{36,37}-django31, lint
+envlist = {py36,py37,py38,py39}-django22,
+          {py36,py37,py38,py39}-django30,
+          {py36,py37,py38,py39}-django31,
+          lint
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/newsfeed
+    PYTHONDONTWRITEBYTECODE=1
+
 commands = coverage run --source newsfeed runtests.py {posargs}
 deps =
-    django220: Django>=2.2,<3
-    django300: Django>=3,<3.1
-    django300: Django>=3.1<3.2
+    django22: Django>=2.2,<3
+    django30: Django>=3.0,<3.1
+    django31: Django>=3.1<3.2
     -r{toxinidir}/requirements_test.txt
 
 [testenv:lint]
