--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install test dependencies
         run: python -m pip install -r requirements_test.txt
       - name: Run tox
-        run: python -m tox
+        run: python -m tox -f py$(python --version 2>&1 | cut -c 8,10)
       - name: Report Coverage
         run: |
           python -m coverage combine
