--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,9 +18,12 @@ jobs:
       - name: Upgrade setuptools
         run: python -m pip install --upgrade pip setuptools
       - name: Install test dependencies
-        run: python -m pip install -r requirements_test.txt
+        run: python -m pip install coverage flake8 model-bakery tox
       - name: Run tox
-        run: python -m tox -f py$(python --version 2>&1 | cut -c 8,10)
+        run: |
+          python -m pip --version
+          python -m tox --version
+          python -m tox
       - name: Report Coverage
         run: |
           python -m coverage combine
