--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,12 +18,9 @@ jobs:
       - name: Upgrade setuptools
         run: python -m pip install --upgrade pip setuptools
       - name: Install test dependencies
-        run: python -m pip install coverage flake8 model-bakery tox
+        run: python -m pip install -r requirements_test.txt
       - name: Run tox
-        run: |
-          python -m pip --version
-          python -m tox --version
-          python -m tox
+        run: tox -e py
       - name: Report Coverage
         run: |
           python -m coverage combine
