--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install test dependencies
         run: python -m pip install -r requirements_test.txt
       - name: Run tox
-        run: tox -e py
+        run: python -m tox
       - name: Send coverage results
         uses: codecov/codecov-action@v1
