--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,9 @@ jobs:
         run: python -m pip install --upgrade pip setuptools
       - name: Install test dependencies
         run: python -m pip install -r requirements_test.txt
-      - name: Run tox
+      - name: Python version
         run: python --version
+      - name: Run tox
         run: python -m tox
       - name: Send coverage results
         uses: codecov/codecov-action@v1
