--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,6 @@ jobs:
         run: |
           python -m pip --version
           python -m tox --version
-          python -m tox -f py$(python --version 2>&1 | cut -c 8,10)
+          python -m tox py$(python --version 2>&1 | cut -c 8,10)
       - name: Send coverage results
         uses: codecov/codecov-action@v1
