--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,14 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Upgrade setuptools
         run: python -m pip install --upgrade pip setuptools
-      - name: Install test dependencies
-        run: python -m pip install -r requirements_test.txt
-      - name: Python version
-        run: python --version
       - name: Run tox
-        run: |
-          python -m pip --version
-          python -m tox --version
-          python -m tox py$(python --version 2>&1 | cut -c 8,10)
+        run: python -m tox
       - name: Send coverage results
         uses: codecov/codecov-action@v1
