--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Upgrade setuptools
         run: python -m pip install --upgrade pip setuptools
+      - name: Install test dependencies
+        run: python -m pip install -r requirements_test.txt
       - name: Run tox
-        run: python -m tox
+        run: |
+          python -m tox
       - name: Send coverage results
         uses: codecov/codecov-action@v1
