--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py{36,37,38,39}-django22,
-          py{36,37,38,39}-django30,
-          py{36,37,38,39}-django31,
+envlist = py{36,37,38,39}-django22
+          py{36,37,38,39}-django30
+          py{36,37,38,39}-django31
           lint
 
 [testenv]
