--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,22 @@ matrix:
   fast_finish: true
   include:
     - env: TOXENV=lint
+
     # Python 3.6
     - python: 3.6
-      env: TOXENV=py36-django22,py36-django30,py36-django31
+      env: TOXENV=py36-django22,py36-django30,py36-django31,py36-django32
 
     # Python 3.7
     - python: 3.7
-      env: TOXENV=py37-django22,py37-django31,lint
+      env: TOXENV=py37-django22,py37-django30,py37-django31,py37-django32
+
+    # Python 3.8
+    - python: 3.8
+      env: TOXENV=py38-django22,py38-django30,py38-django31,py38-django32
+
+    # Python 3.9
+    - python: 3.9
+      env: TOXENV=py39-django22,py39-django30,py39-django31,py39-django32,lint
 
 
 
