--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37}-django22, py{36,37}-django30, py{36,37}-django31, lint
+envlist = py{36,37,38,39}-django22, py{36,37,38,39}-django30, py{36,37,38,39}-django31, py{36,37,38,39}-django32, lint
 
 [testenv]
 setenv =
@@ -8,7 +8,8 @@ commands = coverage run --source newsfeed runtests.py {posargs}
 deps =
     django220: Django>=2.2,<3
     django300: Django>=3,<3.1
-    django300: Django>=3.1<3.2
+    django310: Django>=3.1,<3.2
+    django320: Django>=3.2<3.3
     -r{toxinidir}/requirements_test.txt
 
 [testenv:lint]
