--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run tests with Python ${{ matrix.python-version }} and Django ${{ matrix.django-version }}
         run: |
-          TOX_ENV=$(echo "py${{ matrix.python-version}}-django${{ matrix.python-version}}" | tr -d .)
+          TOX_ENV=$(echo "py${{ matrix.python-version}}-django${{ matrix.django-version}}" | tr -d .)
           echo $TOX_ENV
           python -m tox -e $TOX_ENV
 
