--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,16 +13,22 @@ jobs:
       fail-fast: false
 
       matrix:
-        python-version:
-          - "3.6"
-          - "3.7"
-          - "3.8"
-          - "3.9"
-        django-version:
-          - "2.2"
-          - "3.0"
-          - "3.1"
-          - "3.2"
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        django-version: ["2.2", "2.1", "3.0", "3.1","3.2", "4.0"]
+
+        exclude:
+          - python-version: "3.6"
+            django-version: "4.0"
+
+          - python-version: "3.7"
+            django-version: "4.0"
+
+          - python-version: "3.10"
+            django-version: "2.2"
+          - python-version: "3.10"
+            django-version: "3.0"
+          - python-version: "3.10"
+            django-version: "3.1"
 
     steps:
       - uses: actions/checkout@v2
