--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39}-django22, py{36,37,38,39}-django30, py{36,37,38,39}-django31, py{36,37,38,39}-django32, lint
+envlist = py{36,37,38,39}-django22, py{36,37,38,39}-django30, py{36,37,38,39}-django31, py{36,37,38,39,310}-django32, py{36,37,38,39,310}-django40, lint
 
 [testenv]
 setenv =
@@ -10,6 +10,7 @@ deps =
     django300: Django>=3,<3.1
     django310: Django>=3.1,<3.2
     django320: Django>=3.2<3.3
+    django400: Django>=4.0<4.1
     -r{toxinidir}/requirements_test.txt
 
 [testenv:lint]
