--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
 
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        django-version: ["2.2", "2.1", "3.0", "3.1","3.2", "4.0"]
+        django-version: ["2.2", "3.0", "3.1", "3.2", "4.0"]
 
         exclude:
           - python-version: "3.6"
